force-app/main/default/objects/Sales_Revenue_Data__c/Sales_Revenue_Data__c.object-meta.xml
<CustomObject>
    <label>Sales Revenue Data</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Sales Revenue Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Revenue Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>