force-app/main/default/objects/Sales_Revenue_Data__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>