force-app/main/default/objects/Sales_Revenue_Data__c/fields/April_Revenue__c.field-meta.xml
<CustomField>
    <fullName>April_Revenue__c</fullName>
    <label>April Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>