force-app/main/default/objects/Sales_Revenue_Data__c/fields/August_Revenue__c.field-meta.xml
<CustomField>
    <fullName>August_Revenue__c</fullName>
    <label>August Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>