force-app/main/default/objects/Sales_Revenue_Data__c/fields/December_Revenue__c.field-meta.xml
<CustomField>
    <fullName>December_Revenue__c</fullName>
    <label>December Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>