force-app/main/default/objects/Sales_Revenue_Data__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>