force-app/main/default/objects/Sales_Revenue_Data__c/fields/May_Revenue__c.field-meta.xml
<CustomField>
    <fullName>May_Revenue__c</fullName>
    <label>May Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>