force-app/main/default/objects/Sales_Revenue_Data__c/fields/Sales_Sub_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Sub_Team_Name__c</fullName>
    <label>Sales Sub Team Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Home &amp; Toys</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>