force-app/main/default/objects/Sales_Revenue_Data__c/fields/Sales_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Name__c</fullName>
    <label>Sales Team Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>CPG</fullName>
            </value>
            <value>
                <fullName>Hardline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>